--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "electron-compile": "^6.4.4",
     "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
+    "mongodb": "^3.3.4",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-hot-loader": "^3.1.3"
+    "react-hot-loader": "^3.1.3",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -65,6 +67,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0"
   }
 }
